add transaction logging and download history

--- a/CRMProductDownload/App_LocalResources/Item.resx
+++ b/CRMProductDownload/App_LocalResources/Item.resx
@@ -252,4 +252,10 @@
   <data name="StagedView.Text" xml:space="preserve">
     <value>Staged Releases</value>
   </data>
+  <data name="lblTransactions.Text" xml:space="preserve">
+    <value>Transactions Log</value>
+  </data>
+  <data name="ViewLog.Text" xml:space="preserve">
+    <value>Logs</value>
+  </data>
 </root>
